*Empty MediaWiki Message*

--- a/ᎠᎾᏥᏍᏓᏂᎵ.mw
+++ b/ᎠᎾᏥᏍᏓᏂᎵ.mw
@@ -1,6 +1,6 @@
 [[File:Venus-real.jpg|thumb|200px|ᎠᎾᏂᏍᏓᎾᎵ]]
 
-<big>'''ᎠᎾᏂᏍᏓᎾᎵ'''</big> ᏔᎵᏁᎢ ᏤᏣᎯ.
+<big>'''ᎠᎾᏂᏍᏓᎾᎵ'''</big> ᏔᎵᏁᎢ ᎡᎶᎯ.
 
 [[af:Venus (planeet)]]
 [[als:Venus (Planet)]]
