*Empty MediaWiki Message*

--- a/ᏧᏈᏓ.mw
+++ b/ᏧᏈᏓ.mw
@@ -1,6 +1,6 @@
 [[File:Jupiter_by_Cassini-Huygens.jpg|thumb|200px|ᏧᏈᏓ]]
 
-<big>'''ᏧᏈᏓ'''</big> ᎯᏍᎩᏁᎢ ᏤᏣᎯ.
+<big>'''ᏧᏈᏓ'''</big> ᎯᏍᎩᏁᎢ ᎡᎶᎯ.
 
 [[af:Jupiter (planeet)]]
 [[als:Jupiter (Planet)]]
