*Empty MediaWiki Message*

--- a/ᏌᏓᏂ.mw
+++ b/ᏌᏓᏂ.mw
@@ -1,6 +1,6 @@
 [[File:Saturn_during_Equinox.jpg|thumb|200px|ᏌᏓᏂ]]
 
-<big>'''ᏌᏓᏂ'''</big> ᏑᏓᎵᏁᎢ ᏤᏣᎯ.
+<big>'''ᏌᏓᏂ'''</big> ᏑᏓᎵᏁᎢ ᎡᎶᎯ.
 
 [[af:Saturnus]]
 [[als:Saturn (Planet)]]
