*Empty MediaWiki Message*

--- a/ᏁᏆᏚ.mw
+++ b/ᏁᏆᏚ.mw
@@ -1,6 +1,6 @@
 [[File:Neptune.jpg|thumb|200px|ᏁᏩᏚᏂ]]
 
-<big>'''ᏁᏩᏚᏂ'''</big> ᏧᏁᎵᏁᎢ ᏤᏣᎯ.
+<big>'''ᏁᏩᏚᏂ'''</big> ᏧᏁᎵᏁᎢ ᎡᎶᎯ.
 
 [[af:Neptunus (planeet)]]
 [[als:Neptun (Planet)]]
