*Empty MediaWiki Message*

--- a/ᏡᏙ.mw
+++ b/ᏡᏙ.mw
@@ -1,6 +1,6 @@
 [[File:Pluto_animiert.gif|thumb|200px|ᏡᏙ]]
 
-<big>'''ᏡᏙ'''</big> ᏐᏁᎵᏁᎢ ᏤᏣᎯ.
+<big>'''ᏡᏙ'''</big> ᏐᏁᎵᏁᎢ ᎡᎶᎯ.
 
 [[af:Pluto (dwergplaneet)]]
 [[als:(134340) Pluto]]
