--- a/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
+++ b/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
@@ -11,7 +11,7 @@
 # [[ᏳᏪᏄ]] ᎠᎴ [[Uranus|ᎦᎵᏉᎩᏁ]]
 # [[ᏁᏩᏚᏂ]] ᎠᎴ [[Neptune|ᏧᏁᎵᏁ]]<ref>[[Cultural Resource Center Language Services|Cultural Resource ᎠᏰᏟ ᎧᏬᏂᎯᏍᏗ ᎾᎾᏛᏁᎲ]]. ''[[Cherokee Nation|ᏣᎳᎩᎯ ᎠᏰᎵ]].'' 2010.</ref>
 
-== Ꮎ Dwarf ᏤᏣᎯ ==
+== Ꮎ Dwarf ᏤᎶᎯ ==
 # [[ᏎᎵᏏ]]
 # [[ᏡᏙ]]
 # [[ᎡᎵᏏ]]
