*Empty MediaWiki Message*

--- a/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
+++ b/ᏅᏓ_ᎠᎴ_ᏚᏓᏕᏫᏍᏛ.mw
@@ -1,4 +1,4 @@
-[[Sun|ᏅᏓ]] ᎠᏰᎵ '''ᏅᏓ ᎠᎴ ᏚᏓᏕᏫᏍᏛ'''. ᎣᎦᏤᎵ solar ᎢᏯᏛᏁᎵᏓᏍᏗ ᏣᏁᎳ [[planets|ᏤᎶᎯ]] ᎠᎴ ᏌᏊ [[dwarf planet|ᎤᏍᏗ ᏤᎶᎯ]]: [[Pluto|ᏐᏁᎵᏁ]].<ref>Safire, William. [http://query.nytimes.com/gst/fullpage.html?res=9F02E7DC1631F933A2575AC0A9609C8B63&ref=pluto_planet "The Way We Live Now: 9-10-06: ᎧᏬᏂᎯᏍᏗ-Ꮒ: ᎤᏍᏗ Planet."] ''[[New York Times|ᏄᏯᎩ ᎢᏧᏩᎪᏗ]]''. 10 ᏚᎵᏍᏗ 2006 (12 ᏅᏓᏕᏆ 2010)</ref>
+[[Sun|ᏅᏓ]] ᎠᏰᎵ '''ᏅᏓ ᎠᎴ ᏚᏓᏕᏫᏍᏛ'''. ᎣᎦᏤᎵ solar ᎢᏯᏛᏁᎵᏓᏍᏗ ᏧᏁᎳ [[planets|ᏤᎶᎯ]] ᎠᎴ ᏦᎢ [[ᎤᏍᏗ ᏤᎶᎯ]]: [[ᏡᏙ]].<ref>Safire, William. [http://query.nytimes.com/gst/fullpage.html?res=9F02E7DC1631F933A2575AC0A9609C8B63&ref=pluto_planet "The Way We Live Now: 9-10-06: ᎧᏬᏂᎯᏍᏗ-Ꮒ: ᎤᏍᏗ Planet."] ''[[New York Times|ᏄᏯᎩ ᎢᏧᏩᎪᏗ]]''. 10 ᏚᎵᏍᏗ 2006 (12 ᏅᏓᏕᏆ 2010)</ref>
 
 == Ꮎ ᏧᏁᎳ ᏤᎶᎯ ==
 [[File:UpdatedPlanets2006-cherokee.jpg|right|400px]]
@@ -11,7 +11,7 @@
 # [[ᏳᏪᏄ]] ᎠᎴ [[Uranus|ᎦᎵᏉᎩᏁ]]
 # [[ᏁᏩᏚᏂ]] ᎠᎴ [[Neptune|ᏧᏁᎵᏁ]]<ref>[[Cultural Resource Center Language Services|Cultural Resource ᎠᏰᏟ ᎧᏬᏂᎯᏍᏗ ᎾᎾᏛᏁᎲ]]. ''[[Cherokee Nation|ᏣᎳᎩᎯ ᎠᏰᎵ]].'' 2010.</ref>
 
-== Ꮎ Dwarf ᏤᎶᎯ ==
+== Ꮎ ᎤᏍᏗ ᏤᎶᎯ ==
 # [[ᏎᎵᏏ]]
 # [[ᏡᏙ]]
 # [[ᎡᎵᏏ]]
