*Empty MediaWiki Message*

--- a/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
+++ b/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
@@ -18,7 +18,43 @@
 |-
 |}
 
-<big>'''ᏳᏪᏄ'''</big> ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎦᎸᎶᎢ.
+<big>'''ᏳᏪᏄ'''</big> ([[ᎪᎢ]]: '''Ουρανός''' ''Ouranós''; [[ᎶᎻ]]: '''Caelus''') ᎠᎪᎢ ᎤᏁᎳᏅᎯ ᎦᎸᎶᎢ.
+
+== ᏗᏂᏲᎵ ==
+
+# [[Cyclopes]] (Κύκλωψ)
+## ᎠᏥᏏ (Ἄργης)
+## ᏆᏂᏘᏏ (Βρόντης)
+## ᏍᏖᎶᏈ (Στερόπης)
+# [[Hecatoncheires]] (Ἑκατόγχειρες) — Nā pilikua me nā lima hanele a nā akua o nā [[ʻino]] a me nā [[makani pāhili]].
+## ᏈᎠᏫᎠ (Βριάρεως)
+## ᎪᏔᏏ (Κόττος)
+## ᏣᎢᏥᏏ (Γύγης)
+# [[ᎠᏂᏔᎢᏖᏂ]]
+## [[ᏟᏯᏏ]]
+## [[ᏏᏯᏏ]]
+## [[ᏉᎾᏏ]]
+## [[ᎣᏏᏰᏄ]]
+## [[ᎭᎢᏈᎵᎣᏂ]]
+## [[ᎠᏯᏈᏔ]]
+## [[ᏁᎹᏏᏂ]]
+## [[ᏈᎩ]]
+## [[ᎵᎠ]]
+## [[ᏘᏘᏏ]]
+## [[ᏘᏯ]]
+## [[ᏖᎻᏏ]]
+# [[Erinyes]]
+## [[ᎠᎴᎧᏙ]]
+## [[ᎺᎨᎳ]]
+## [[ᏘᏏᏬᏂ]]
+# [[Gigantes]]
+## [[ᎳᎵᏌᏲᏂᏯ]]
+## [[ᎠᏙᏏ]]
+## [[ᏝᎢᏘᏯ]]
+## [[ᎡᏂᏎᎳᏓᏏ]]
+## [[ᎡᎩᎣᏂ]]
+# [[ᏙᏧ ᎠᏂᏂᎻᏆ]]
+# [[ᎠᏩᎶᏓᏘ]] (ᎮᏏᎣᏗ)
 
 [[af:Uranos]]
 [[ar:أورانوس (ميثولوجيا)]]
