--- a/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
+++ b/ᏳᏪᏅᏍ_(ᎤᏁᎳᏅᎯ).mw
@@ -26,7 +26,7 @@
 ## ᎠᏥᏏ (Ἄργης)
 ## ᏆᏂᏘᏏ (Βρόντης)
 ## ᏍᏖᎶᏈ (Στερόπης)
-# [[Hecatoncheires]] (Ἑκατόγχειρες) — Nā pilikua me nā lima hanele a nā akua o nā [[ʻino]] a me nā [[makani pāhili]].
+# [[Hecatoncheires]] (Ἑκατόγχειρες)
 ## ᏈᎠᏫᎠ (Βριάρεως)
 ## ᎪᏔᏏ (Κόττος)
 ## ᏣᎢᏥᏏ (Γύγης)
