--- a/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
+++ b/ᎠᏂᎪᎢ_ᎤᏂᏃᎮᎸᎯ.mw
@@ -45,7 +45,7 @@
 || [[ᏗᎠᏏ]] / [[ᏑᏍ]] || ᎤᏁᎳᏅᎯ [[ᎠᏴᏓᏆᎶᏍᎬ]] ᎠᎴ [[ᎤᎬᏫᏳᎯ]] ᎤᎾᏁᎳᏅᎯ ᎤᎾᏤᎵᎦ.
 |}
 
-=== [[Protogenoi]] ===
+=== [[ᎢᎬᏱ ᎤᎾᏁᎳᏅᎯ]] ===
 
 {| class="wikitable" style="border:1px; background-color:#f7f8ff" align=center cellpadding="6"
 |-align="center" bgcolor="#e6e9ff"
