*Empty MediaWiki Message*

--- a/ᏘᏲᎭᎵ_ᎡᏆ.mw
+++ b/ᏘᏲᎭᎵ_ᎡᏆ.mw
@@ -4,15 +4,15 @@
 <gallery>
 File:Tyrannosaurus_BW.jpg|ᎤᎬᏫᏳᎯ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Tyrannosaurus rex''</small>
 File:Pterodactylus_BW.jpg|ᏕᎪᏯᏛ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Pterodactylus antiquus''</small>
-File:Archeopteryx_color.jpg|ᏥᏍᏆ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Archaeopteryx lithographica''</small>
+File:Archeopteryx_color.jpg|ᏥᏍᏆ-ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Archaeopteryx lithographica''</small>
 File:Stegosaurus_BW.jpg|ᎦᏐᎯ ᏗᏖᎵᏙ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Stegasaurus''</small>
 File: Giraffatitan_DB.jpg |ᏗᎦᎵᏍᏚᎩᏍᎩ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Giraffatitan brancai''</small>
-File:Pachycephalosaurus.jpg|ᎤᎭᎨᏛ ᎠᏍᎪᎵ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Pachycephalosaurus wyomingensis''</small>
-File:Ankylosaurus_dinosaur.png|ᎤᏯᏍᎦᎵ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Ankylosaurus magniventris''</small>
-File:Ichthyosaurus_BW.jpg|ᎠᏣᏗ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Ichthyosaurus communis''</small>
-File:Velociraptor_dinoguy2.jpg|ᎠᎦᏣᏄᎳ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Velociraptor mongoliensis''</small>
+File:Pachycephalosaurus.jpg|ᏍᏓᏯ ᎠᏍᎪᎵ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Pachycephalosaurus wyomingensis''</small>
+File:Ankylosaurus_dinosaur.png|ᎤᏯᏍᎦᎳ-ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Ankylosaurus magniventris''</small>
+File:Ichthyosaurus_BW.jpg|ᎠᏣᏗ-ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Ichthyosaurus communis''</small>
+File:Velociraptor_dinoguy2.jpg|ᏘᏲᎭᎵ ᎡᏆ ᎠᎦᏣᏄᎳ <br> <small>''Velociraptor mongoliensis''</small>
 File:Elasmosaurus2.jpg|ᎠᏴᏣᏅᎯᏓ ᎠᎺᏉᎯ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Elasmosaurus platyurus''</small>
-File:Protoceratops_BW.jpg|ᏌᏊ ᎤᏲᎾ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Protoceratops''</small>
+File:Protoceratops_BW.jpg|ᎢᎬᏱ ᎤᏲᎾ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Protoceratops''</small>
 File:Triceratops_BW.jpg|ᏦᎢ ᏧᏲᎾ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Triceratops horridus''</small>
 File:Iguanodon_Dinopark.jpg|ᎢᏆᎾ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Iguanodon bernissartensis''</small>
 File:Styracosaurus_dinosaur.png|ᏧᏣᏲᏍᏗ ᎤᎧᏛ ᏘᏲᎭᎵ ᎡᏆ <br> <small>''Styracosaurus albertensis''</small>
