--- a/ᏪᏌ.mw
+++ b/ᏪᏌ.mw
@@ -1,21 +1,28 @@
-{{Taxobox
-| color = pink
-| name = ᏪᏌ
-| status = ᎤᎸᎢᏔ
-| image = Cat_outside.jpg
-| image_width = 200px
-| image_caption =
-| regnum = [[Animalia]]
-| phylum = [[Chordate|Chordata]]
-| classis = [[Mammal]]ia
-| ordo = [[Carnivora]]
-| familia = [[Felidae]]
-| genus = ''[[Felis]]''
-| species = ''[[Wild cat|F. silvestris]]''
-| subspecies = '''''F.s. catus'''''
-| trinomial = ''Felis silvestris catus''
-| trinomial_authority = ([[Carolus Linnaeus|Linnaeus]], 1758)
-}}
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big>'''ᏪᏏ'''</big></big>
+|}
+|-
+| align=center colspan=2 | [[File:Collage_of_Six_Cats-02.jpg|250px]]
+|-
+| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' || [[Animalia]]
+|-
+| '''ᎠᏝᎥᎢ''' || [[Chordata]]
+|-
+| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' || [[Mammalia]]
+|-
+| '''ᎠᏓᏅᏍᏗ''' || [[Carnivora]]
+|-
+| '''ᏏᏓᏁᎸᎯ''' || [[Felidae]]
+|-
+| '''ᎾᎿᎨᏒ''' || ''[[Felis]]''
+|-
+| '''ᏗᎦᎪᏗ''' || [[ᏪᏏ|F. catus]] (ᏪᏏ)
+|}
+
 ᎯᎠ '''ᏪᏌ''' (ᎠᎴ '''ᏄᏍᏛ ᎤᏪᏅᏒ ᏪᏌ''', '''ᎦᎵᏦᏕ ᎡᎯ ᏪᏌ''') ᎨᏒᎢ ᎤᏍᏗ [[carnivore|ᎠᎵᏍᏓᏴᏗ]] [[mammal|ᎦᏂᏝᎢ]] ᎯᎠ subspecies ''[[Felis]] silvestris catus''.  ᎾᏍᎩ ᎨᏒᎢ ᎠᏛᏅᎢᏍᏔᏅ [[predator]] ᎠᎴ [[Animal cognition|ᎣᏍᏛ ᎠᎦᏔᎯ]] ᎦᏂᏝᎢ, ᎤᎾᏅᏛ ᎦᏃᎭᎵᏓᏍᏗ ᎦᏬᎯᎸᏙᏗ ᏌᏊ ᎠᎦᏴᎵ [[species|ᎢᏧᎳᎭ ᏗᏂᏱᎴᎩ]] ᎾᏍᎩᎾᎢ ᎠᎵᏍᏓᏴᏗ, ᎠᎴ ᏰᎵᏇ ᎢᎬᏁᏗ ᎠᎴᏂᏙᎲ ᎠᎨᏲᏅᎯ (ᎠᎴ ᎠᎾᏕᎶᏆᏍᎬ ᎾᎥᎢ ᎤᏩᏌᏊ) ᎠᏒᎾᏍᏗ ᏄᏦᏍᏛᎾ ᎪᎱᏍᏗ ᎬᏔᏂᏓᏍᏗ ᏯᏛᎿ ᏥᏄᏍᏗ ᏂᎬᏂᏏᏍᎬ-ᎤᏱᏙᎸᎩ ᏗᏍᏚᏗ ᎠᎴ ᎧᎵᏬᎯ ᎫᏢᎥᏍᎬ (ᎠᎪᏩᏛᏗ [[Cat intelligence|ᏪᏌ ᎪᎱᏍᏗ ᎨᏒ]]).  ᎾᏍᎩ ᎤᎭ ᎠᎴᏂᏙᎸ ᎭᏫᎾᏗᏢ ᎠᏍᏚᏗ ᎤᎾᎵᎪᏒ ᎬᏙᏗ [[human|ᏴᏫ]] ᎾᏍᎩᎾᎢ 3,500 8,000 ᏧᏕᏘᏴᏓ<ref>[http://www.judithstock.com/Speaking_of_Animals/History_of_Cats/history_of_cats.html "Speaking of Animals."] (ᎦᎶᏂ 15, 2005)</ref>, ᏓᎾᏎᎯᎲ ᏂᎬᎢ ᎭᏫᎾᏗᏢ ᎯᎠ [[mythology|ᎤᏁᎳᏅᎯ]] ᎠᎴ [[legend|ᏄᎵᏍᏔᏂᏙᎸ]] ᎯᎸᏍᎩ ᎥᎦᏔᎲᎢ.
 
 ᏪᏌ ᎦᎷᏨ ᎭᏫᎾᏗᏢ [[List of cat breeds|ᏔᎳᏚ  ᎠᏂᏁᏉᎬ]] ᎠᎴ ᏧᏓᎴᏅᏓ ᎦᏟᏌᏅ ᏧᏓᎴᏅᏓ ᏗᎧᏃᏗ.  ᎤᏍᏆᎸᎲ ᏧᎾᏍᏗ, ᎢᎦᏛ ᎠᎴ [[Sphynx (cat)|ᏗᏄᏪᏍᏗ]] ᎠᎴ ᎢᎦᏛ ᎠᎴ [[Manx (cat)|tailless]]. ᎤᏅᏌ ᎬᏙᏗ ᎤᏟ ᎢᎦᎢ ᎬᎾᏬᏍᎬ ᏌᏊ ᏍᎪᎯᏧᏈ ᎧᏁᎬ ᎤᏲᏴᎬ ᎠᎴ ᎢᏗᎦᎪᏘ ᎠᏰᎸ ᎦᏬᏂᎯᏍᏗ ᎾᏍᎩᎾᎢ ᏗᏛᎪᏔᏅ, ᎠᏠᏯᏍᏗᏍᎩ ᏓᏯᏂᏍᎬ ("ᎠᏠᏯᏍᏗ" ᎠᎴ "miaou"), [[purr|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[hiss]] ᎪᎯᏳᏙᏗ, [[growling|ᎠᏠᏯᏍᏗ]], [[chirp|ᎠᏠᏯᏍᏗ]]ᎪᎯᏳᏙᏗ, [[click|ᎠᎧᏁᏍᏗ]]ᎪᎯᏳᏙᏗ, ᎠᎴ [[grunt|ᎤᎵᏰᏗᏍᎬ]]ᎪᎯᏳᏙᏗ.<ref> [http://www.channel3000.com/news/1472741/detail.html Meows Mean More To Cat Lovers]. ''Channel3000.com''. Accessed 14 ᏕᎭᎷᏱ 2006.</ref>  ᎾᏍᎩᏯᎢ ᎠᏂᏐᏈᎵ ᎠᎴ ᏐᎢ ᎫᏄᏡᏂ ᎡᎿᎢ ᎡᎥ, ᏪᏌ ᏰᎵᏇ ᏗᏙᎳᎩ [[feral cat|feral ᏪᏌ]], ᎠᎴᏂᏙᎲ ᎢᏳᎵᏍᏙᏗᏱ ᎭᏫᎾᏗᏢ ᎯᎠ ᎨᏯᏔᎯ, ᎭᏢᏃ, ᎠᎵᏍᎦᏁᏍᎩ ᎯᎠ ᎥᎦᏔᎲᎢ Ꮎ ᎤᏅᏌ ᎠᎴ ᎤᏤᎵᏛ ᎡᎿᎢ ᎡᎥ, ᎤᏅᏌ ᏫᎵ ᎢᏳᏓᎵᎭ ᎤᏙᏢᏒ ᎤᏍᏗ feral [[cat colony|ᏪᏌ ᎤᎾᏓᏡᎩ ᎢᏳᎾᏓᎵ]].
