*Empty MediaWiki Message*

--- a/Felidae.mw
+++ b/Felidae.mw
@@ -3,10 +3,10 @@
 | style="background:#D3D3A4;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
-| align="center" width="140px" | <big>'''ᏪᏏ'''</big>
+| align="center" width="140px" | <big><big>'''ᏪᏏ ᏏᏓᏁᎸᎯ'''</big></big> <br> ''Felidae''
 |}
 |-
-| align=center colspan=2 | [[File:Collage_of_Six_Cats-02.jpg|250px]]
+| align=center colspan=2 | [[File:4panthera2.0.png|250px]]
 |-
 | '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' <small>(Regnum)</small> || [[Animalia]]
 |-
