--- a/Felidae.mw
+++ b/Felidae.mw
@@ -27,7 +27,7 @@
 File:Chocolate_Persian.jpg|[[ᏪᏏ]] <br> ''Felis catus''
 File:HansomeLion_002.jpg|[[ᏢᏓᏥ ᎤᏍᏆᎴᏂ]] <br> ''Panthera leo''
 File:TheCheethcat.jpg|[[ᏢᏓᏥ ᎠᎦᏣᏄᎳ]] <br> ''Acinonyx jubatus''
-File:Standing_jaguar.jpg|[[ᎠᎺᎵᎨ]] <br> ''Panthera onca''
+File:Standing_jaguar.jpg|[[ᎠᎺᎵᎨ ᏢᏓᏥ ᎤᏅᏣᏗ]] <br> ''Panthera onca''
 File:LuchsP1050413.jpg|[[ᎬᎮ]] <br> ''Lynx lynx''
 File:Bobcat2.jpg|[[ᎠᎺᎵᎨ ᎬᎮ]] <br> ''Lynx rufus''
 File:Mountain_lion.jpg|[[ᏢᏓᏥ]] <br> ''Puma concolor''
