*Empty MediaWiki Message*

--- a/ᏢᏓᏥᏧᎶᎸᏗ.mw
+++ b/ᏢᏓᏥᏧᎶᎸᏗ.mw
@@ -8,19 +8,19 @@
 |-
 | align=center colspan=2 | [[File:Panthera_tigris_sumatran_subspecies.jpg|250px]]
 |-
-| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' || [[Animalia]]
+| '''ᎠᏰᎵ ᎤᎾᏙᏢᏒ''' <small>(Regnum)</small> || [[Animalia]]
 |-
-| '''ᎠᏝᎥᎢ''' || [[Chordata]]
+| '''ᎠᏝᎥᎢ''' <small>(Phylum)</small> || [[Chordata]]
 |-
-| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' || [[Mammalia]]
+| '''ᏗᏓᎴᎾᏔᏅ ᏗᎦᏘᏌᏅᎩ''' <small>(Classis)</small> || [[Mammalia]]
 |-
-| '''ᎠᏓᏅᏍᏗ''' || [[Carnivora]]
+| '''ᎠᏓᏅᏍᏗ''' <small>(Ordo)</small> || [[Carnivora]]
 |-
-| '''ᏏᏓᏁᎸᎯ''' || [[Felidae]]
+| '''ᏏᏓᏁᎸᎯ''' <small>(Familia)</small> || [[Felidae]]
 |-
-| '''ᎾᎿᎨᏒ''' || ''[[Panthera]]''
+| '''ᎾᎿᎨᏒ''' <small>(Genus)</small> || ''[[Panthera]]''
 |-
-| '''ᏗᎦᎪᏗ''' || [[ᏢᏓᏥ ᏧᎶᎸᏗ|P. tigris]] (ᏢᏓᏥ ᏧᎶᎸᏗ)
+| '''ᏗᎦᎪᏗ''' <small>(Species)</small> || [[ᏢᏓᏥ ᏧᎶᎸᏗ|P. tigris]] (ᏢᏓᏥ ᏧᎶᎸᏗ)
 |}
 
 ᎡᏆ ᏅᎩ ᏗᎦᏅᏌᏗ [[ᏪᏏ ᏏᏓᏁᎸᎯ]] ᎡᎯ ᎠᎴ ᎠᏓᎶᏂᎨ ᎠᎴ ᎬᏂᎨ ᎠᏑᏫᏓ <big>'''ᏢᏓᏥ ᏧᎶᎸᏗ'''</big>.
