*Empty MediaWiki Message*

--- a/Cetacea.mw
+++ b/Cetacea.mw
@@ -31,3 +31,88 @@ File:Killerwhales_jumping.jpg|[[ᏗᏓᎯᎯ ᏓᏆ]] <br> ''Orcinus orca''
 File:Beluga03.jpg|[[ᎤᏁᎦ ᏓᏆ]] <br> ''Delphinapterus leucas''
 File:Narwhals_breach.jpg|[[ᎤᏲᎾ ᏓᏆ]] <br> ''Monodon monoceros''
 </gallery>
+
+[[af:Walvisagtiges]]
+[[ar:حيتانيات]]
+[[an:Cetacea]]
+[[az:Balinakimilər]]
+[[zh-min-nan:Cetacea]]
+[[be:Кітападобныя]]
+[[be-x-old:Кітападобныя]]
+[[bs:Cetacea]]
+[[br:Morvil]]
+[[bg:Китоподобни]]
+[[ca:Cetaci]]
+[[cv:Кит]]
+[[cs:Kytovci]]
+[[cy:Cetacea]]
+[[da:Hvaler]]
+[[de:Wale]]
+[[nv:Łóóʼtsoh dóó Tééh hóyáanii]]
+[[et:Vaalalised]]
+[[el:Κητώδη]]
+[[en:Cetacea]]
+[[es:Cetacea]]
+[[eo:Cetacoj]]
+[[eu:Zetazeo]]
+[[fa:آب‌بازسانان]]
+[[fo:Hvalur]]
+[[fr:Cetacea]]
+[[gl:Cetáceo]]
+[[ko:고래]]
+[[hi:व्हेल]]
+[[hr:Kitovi]]
+[[io:Cetaceo]]
+[[id:Cetacea]]
+[[is:Hvalir]]
+[[it:Cetacea]]
+[[he:לווייתנאים]]
+[[ka:ვეშაპისნაირნი]]
+[[kk:Киттәрізділер]]
+[[sw:Nyangumi]]
+[[la:Cetacea]]
+[[lv:Vaļveidīgie]]
+[[lb:Walen]]
+[[lt:Banginiai]]
+[[lij:Cetacea]]
+[[li:Walvèsechtege]]
+[[hu:Cetek]]
+[[ml:സീറ്റേസി ഗോത്രം]]
+[[ms:Cetacea]]
+[[nl:Walvisachtigen]]
+[[ne:ह्वेल]]
+[[ja:クジラ目]]
+[[frr:Wal (-fesk)]]
+[[no:Hvaler]]
+[[nn:Kvalar]]
+[[nov:Cetacea]]
+[[oc:Cetacea]]
+[[pnb:سیٹیشیا]]
+[[pfl:Wale]]
+[[pl:Walenie]]
+[[pt:Cetáceos]]
+[[ro:Cetaceu]]
+[[qu:Wallina]]
+[[ru:Китообразные]]
+[[sah:Кииттиҥилэр аймахтара]]
+[[sq:Balena]]
+[[scn:Cetacea]]
+[[simple:Cetacea]]
+[[sk:Veľryby (rad)]]
+[[sl:Kiti]]
+[[so:Nibiri]]
+[[sr:Китови]]
+[[fi:Valaat]]
+[[sv:Valar]]
+[[ta:கடற்பாலூட்டி]]
+[[th:อันดับวาฬและโลมา]]
+[[tg:Кит]]
+[[tr:Balinalar]]
+[[uk:Китоподібні]]
+[[za:Ginghyiz]]
+[[vi:Bộ Cá voi]]
+[[vls:Walvissn]]
+[[war:Cetacea]]
+[[zh-yue:鯨魚]]
+[[diq:Balina]]
+[[zh:鯨目]]
