add World Ocean map

--- a/ᎠᎺᏉᎯ.mw
+++ b/ᎠᎺᏉᎯ.mw
@@ -1,4 +1,4 @@
-[[File:Oceans.png|right|thumb|400px|ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎺᏉᎯ ᏥᏄᏍᏗ ᎠᎪᎲᎢ ᏂᏛᎴᏅᏓ ᎯᎠ [[South Pacific|ᎤᎦᎾᏭ ᏭᏕᎵᏴ ᎠᎺᏉᎯ]]]]
+[[File:Oceans.png|right|thumb|400px|ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᎺᏉᎯ ᏥᏄᏍᏗ ᎠᎪᎲᎢ ᏂᏛᎴᏅᏓ ᎯᎠ [[South Pacific|ᎤᎦᎾᏭ ᏭᏕᎵᏴ ᎠᎺᏉᎯ]]]][[Image:Mappemonde_oceanique_Serret.gif|thumb|The world ocean [http://mappamundi.free.fr/ mappemonde océanique Serret]]]
 
 '''ᎠᎺᏉᎯ''' (ᏂᏛᎴᏅᏓ [[Oceanus|Okeanos]] ᎭᏫᎾᏗᏢ ᎠᎪᎢ, ᎯᎠ ᎯᎸᎯᏳᎢ ᎠᎪᎢ noticing ᎯᎠ ᎤᎳᏂᎩᏓ ᎠᎵᏱᎵᏒ ᎧᏃᎮᏗ Ꮎ flowed ᎤᏣᏘᎾ Gibraltar ᎠᎴ ᏃᎵᏍᎬᎢ ᎾᏍᎩ ᏥᏄᏍᏛᎩ ᎡᏆ ᎤᏪᏴ) ᎫᏢᏗ ᎾᎥᏂᎨᏍᏗ ᏦᎢ ᎠᏂᎩᏄᏙᏗ (71%) ᎯᎠ ᎦᏚᎢ ᎯᎠ [[Earth|ᎡᎶᎯ]], ᎠᎴ ᎾᎥᏂᎨᏍᏗ ᎠᏰᎵ ᎢᏴ ᎯᎠ ᎡᎶᎯ ᎤᏤᎵ ᎠᏜ ᎠᎹᏱ ᎠᎴ ᎦᏬᎯᎸᏙᏗ 3,000 ᎠᏎᎯᎯ (9,800 ft) ᎠᏍᏛᎩ.
 
