*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -1,38 +1,38 @@
 {| class="wikitable" style="text-align:center"
 |- style="background:#cccccc"
-! # !! colspan=2|Tổng thống !! Bắt đầu nhiệm kỳ !! Kết thúc nhiệm kỳ !! Đảng !! Phó tổng thống !! Nhiệm kỳ 
+! # !! colspan=2|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ !! Bắt đầu nhiệm kỳ !! Kết thúc nhiệm kỳ !! Đảng !! Phó tổng thống !! Nhiệm kỳ 
 |- 
 | rowspan=2 | '''1'''
-| rowspan=2 | [[George Washington]]
+| rowspan=2 | <big>[[ᏣᏥ ᏩᏒᏓᎾ]]</big> <br> <small>''George Washington'' <br> (1732–1799)</small>
 | rowspan=2 | [[File:Gilbert_Stuart,_George_Washington_(Lansdowne_portrait,_1796).jpg|100px]]
-| rowspan=2 | [[30 April]] [[1789]]
-| rowspan=2 | [[4 March]] [[1797]]
+| rowspan=2 | [[ᎧᏬᏂ 30]]‚ [[1789]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1797]]
 | rowspan=2 | Không Đảng
-| rowspan=2 | [[John Adams]]
+| rowspan=2 | <big>[[ᏣᏂ ᎠᏓᎻᏏ]]</big> <br> <small>''John Adams''</small>
 | align=center | 1
 |- 
 | align=center | 2
 |- 
 || '''2'''
-| [[John Adams]]
+| <big>[[ᏣᏂ ᎠᏓᎻᏏ]]</big> <br> <small>''John Adams'' <br> (1735–1826)</small>
 | [[file:Adamstrumbull.jpg|100px]]
-| [[4 March]] [[1797]]
-| [[4 March]] [[1801]]
-| Đảng Liên bang<br />Không Đảng<ref>While Adams' cabinet (left over from Washington's second term) were Federalist party members, Adams never belonged to the Federalist party in the sense that Hamilton belonged to the Federalists or Jefferson and Madison belonged to the Democratic-Republicans, as was evidenced throughout his presidential career as both parties lauded and criticized him. </ref>
-| 
+| [[ᎠᏅᏱ 4]]‚ [[1797]]
+| [[ᎠᏅᏱ 4]]‚ [[1801]]
+| Đảng Liên bang<br />Không Đảng
+| <big>[[ᏓᎻ ᏤᏩᏌᏂ]]</big> <br> <small>''Thomas Jefferson''</small>
 | align=center | 3
 |- 
 |- 
 | rowspan=2 | '''3'''
-| rowspan=2 | [[Thomas Jefferson]]
+| rowspan=2 | <big>[[ᏓᎻ ᏤᏩᏌᏂ]]</big> <br> <small>''Thomas Jefferson'' <br> (1743–1826) </small>
 | rowspan=2 | [[File:Thomas_Jefferson_by_Rembrandt_Peale,_1800.jpg|100px]]
-| rowspan=2 | [[4 March]] [[1801]]
-| rowspan=2 | [[4 March]] [[1809]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1801]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
 | rowspan=2 | Đảng Dân chủ - Cộng hòa
-| [[Aaron Burr]]
+| <big>[[ᎡᎳᏂ Ꮛ]]</big> <br> ''Aaron Burr''
 | align=center | 4
 |- 
-| [[George Clinton (vice president)|George Clinton]]
+| <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''</small>
 | align=center | 5<includeonly>
 |}</includeonly></onlyinclude>
 |- 
