*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -29,7 +29,7 @@
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1801]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
 | rowspan=2 | Đảng Dân chủ - Cộng hòa
-| <big>[[ᎡᎳᏂ Ꮛ]]</big> <br> ''Aaron Burr''
+| <big>[[ᎡᎳᏂ Ꮛ]]</big> <br> <small>''Aaron Burr''</small>
 | align=center | 4
 |- 
 | <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''</small>
@@ -37,74 +37,74 @@
 |}</includeonly></onlyinclude>
 |- 
 | rowspan=2 | '''4'''
-| rowspan=2 | [[James Madison]]
+| rowspan=2 | <big>[[ᏥᎻ ᎺᏗᏌᏂ]]</big> <br> <small>''James Madison'' <br> (1751–1836)</small>
 | rowspan=2 | [[File:Jm4.gif|100px]]
-| rowspan=2 | [[4 March]] [[1809]]
-| rowspan=2 | [[4 March]] [[1817]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[George Clinton (vice president)|George Clinton]]<ref name="D">Died in office of natural causes.</ref>
+| <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''
 | align=center | 6
 |- 
-| [[Elbridge Gerry]]<ref name = "D"/><br /><small>''vacant''</small>
+| <big>[[ᎡᎵᏈᏥ ᎨᏫ]]</big> <br> <small>''Elbridge Gerry''</small>
 | align=center | 7
 |- 
 | rowspan=2 | '''5'''
-| rowspan=2 | [[James Monroe]]
+| rowspan=2 | <big>[[ᏥᎻ ᎹᏂᏬ]]</big> <br> <small>''James Monroe'' <br> (1758–1831)</small>
 | rowspan=2 | [[File:jm5.gif|100px]]
-| rowspan=2 | [[4 March]] [[1817]]
-| rowspan=2 | [[4 March]] [[1825]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1825]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| rowspan=2 | [[Daniel D. Tompkins|Daniel Tompkins]]
+| rowspan=2 | <big>[[ᏕᏂᎵ ᏓᎻᎩᏂᏏ|ᏕᏂᎵ Ꮧ. ᏓᎻᎩᏂᏏ]]</big> <br> <small>''Daniel D. Tompkins''
 | align=center | 8
 |- 
 | align=center | 9
 |- 
 | '''6''' 
-| [[John Quincy Adams]]
+| <big>[[ᏣᏂ ᏈᏂᏏ ᎠᏓᎻᏏ]]</big> <br> <small>''John Quincy Adams'' <br> (1767–1848)</small>
 | [[File:John_Quincy_Adams_by_GPA_Healy,_1858.jpg|100px]]
-| [[4 March]] [[1825]]
-| [[4 March]] [[1829]]
+| [[ᎠᏅᏱ 4]]‚ [[1825]]
+| [[ᎠᏅᏱ 4]]‚ [[1829]]
 | Đảng Dân chủ - Cộng hòa
-| [[John C. Calhoun|John Calhoun]]
+| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun''
 | align=center | 10
 |- 
 | rowspan=2 | '''7'''
-| rowspan=2 | [[Andrew Jackson]]
+| rowspan=2 | <big>[[ᎡᏂᏗ ᏤᎩᏌᏂ]]</big> <br> <small>''Andrew Jackson'' <br> (1767–1845)</small>
 | rowspan=2 | [[File:Andrew jackson head.jpg|100px]]
-| rowspan=2 | [[4 March]] [[1829]]
-| rowspan=2 | [[4 March]] [[1837]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1829]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1837]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[John C. Calhoun|John Calhoun]]<Ref name = "R">Resigned.</ref>
+| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun''
 | align=center | 11
 |- 
-| [[Martin Van Buren]]
+| <big>[[ᎹᏘᏂ ᏩᏂ ᏊᎴᏂ]]</big> <br> <small>''Martin Van Buren''
 | align=center | 12
 |- 
 | '''8'''
-| [[Martin Van Buren]]
+| <big>[[ᎹᏘᏂ ᏩᏂ ᏊᎴᏂ]]</big> <br> <small>''Martin Van Buren'' <br> (1782–1862)</small>
 | [[File:mb8.gif|100px]]
-| [[4 March]] [[1837]]
-| [[4 March]] [[1841]]
+| [[ᎠᏅᏱ 4]]‚ [[1837]]
+| [[ᎠᏅᏱ 4]]‚ [[1841]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Richard Mentor Johnson|Richard Johnson]]
+| <big>[[ᎵᏣᏗ ᎺᏂᏙᎠ ᏣᏂᏌᏂ]]</big> <br> <small>''Richard Mentor Johnson''
 | align=center | 13
 |- 
 | '''9'''
-| [[William Henry Harrison|William H. Harrison]]
+| <big>[[ᏫᎵᏯᎻ ᎮᏁᏫ ᎮᏫᏌᏂ|ᏫᎵᏯᎻ Ꭾ. ᎮᏫᏌᏂ]]</big> <br> <small>'' William H. Harrison'' <br> (1773–1841)</small>
 | [[File:William_Henry_Harrison_by_James_Reid_Lambdin,_1835.jpg|100px]]
-| [[4 March]] [[1841]]
-| [[4 March]] [[1841]]<ref name = "D"/>
+| [[ᎠᏅᏱ 4]]‚ [[1841]]
+| [[ᎠᏅᏱ 4]]‚ [[1841]]<ref name = "D"/>
 | Đảng Whig
-| [[John Tyler]]
+| <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler''
 | rowspan=2 align=center | 14
 |- 
 | '''10'''
-| [[John Tyler]]
+| <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler'' <br> (1790–1862)</small>
 | [[File:WHOportTyler.jpg|100px]]
-| [[4 March]] [[1841]]
-| [[4 March]] [[1845]]
-| Đảng Whig<br />Không Đảng<ref>Former Democrat who ran for Vice President on Whig ticket. Clashed with Whig congressional leaders and was expelled from the Whig party in 1841. </ref>
-|
+| [[ᎠᏅᏱ 4]]‚ [[1841]]
+| [[ᎠᏅᏱ 4]]‚ [[1845]]
+| Đảng Whig<br />Không Đảng
+| 
 |- 
 | '''11'''
 | [[James K. Polk]]
