*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -42,7 +42,7 @@
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''
+| <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''</small>
 | align=center | 6
 |- 
 | <big>[[ᎡᎵᏈᏥ ᎨᏫ]]</big> <br> <small>''Elbridge Gerry''</small>
@@ -54,7 +54,7 @@
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1825]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| rowspan=2 | <big>[[ᏕᏂᎵ ᏓᎻᎩᏂᏏ|ᏕᏂᎵ Ꮧ. ᏓᎻᎩᏂᏏ]]</big> <br> <small>''Daniel D. Tompkins''
+| rowspan=2 | <big>[[ᏕᏂᎵ ᏓᎻᎩᏂᏏ|ᏕᏂᎵ Ꮧ. ᏓᎻᎩᏂᏏ]]</big> <br> <small>''Daniel D. Tompkins'' </small>
 | align=center | 8
 |- 
 | align=center | 9
@@ -65,7 +65,7 @@
 | [[ᎠᏅᏱ 4]]‚ [[1825]]
 | [[ᎠᏅᏱ 4]]‚ [[1829]]
 | Đảng Dân chủ - Cộng hòa
-| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun''
+| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun'' </small>
 | align=center | 10
 |- 
 | rowspan=2 | '''7'''
@@ -74,10 +74,10 @@
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1829]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1837]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun''
+| <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun'' </small>
 | align=center | 11
 |- 
-| <big>[[ᎹᏘᏂ ᏩᏂ ᏊᎴᏂ]]</big> <br> <small>''Martin Van Buren''
+| <big>[[ᎹᏘᏂ ᏩᏂ ᏊᎴᏂ]]</big> <br> <small>''Martin Van Buren''</small>
 | align=center | 12
 |- 
 | '''8'''
@@ -86,7 +86,7 @@
 | [[ᎠᏅᏱ 4]]‚ [[1837]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| <big>[[ᎵᏣᏗ ᎺᏂᏙᎠ ᏣᏂᏌᏂ]]</big> <br> <small>''Richard Mentor Johnson''
+| <big>[[ᎵᏣᏗ ᎺᏂᏙᎠ ᏣᏂᏌᏂ]]</big> <br> <small>''Richard Mentor Johnson'' </small>
 | align=center | 13
 |- 
 | '''9'''
@@ -95,7 +95,7 @@
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]<ref name = "D"/>
 | Đảng Whig
-| <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler''
+| <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler'' </small>
 | rowspan=2 align=center | 14
 |- 
 | '''10'''
@@ -107,96 +107,97 @@
 | 
 |- 
 | '''11'''
-| [[James K. Polk]]
+| <big>[[ᏥᎻ Ꮎ. ᏉᎵᎩ]]</big> <br> <small>''James K. Polk'' <br> (1795–1849)</small>
 | [[File:James_Knox_Polk_by_GPA_Healy,_1858.jpg|100px]]
-| [[4 March]] [[1845]]
-| [[4 March]] [[1849]]
+| [[ᎠᏅᏱ 4]]‚ [[1845]]
+| [[ᎠᏅᏱ 4]]‚ [[1849]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[George M. Dallas|George Dallas]]
+| <big>[[ᏣᏥ Ꮋ. ᏓᎳᏏ]]</big> <br> <small>''George M. Dallas''</small>
 | align=center | 15
 |- 
 | '''12'''
-| [[Zachary Taylor]]
+| <big>[[ᏣᎦᎵ ᏖᎢᎳ]]</big> <br> <small>''Zachary Taylor'' <br> (1784–1850)</small>
 | [[File:Zachary_Taylor_by_Joseph_Henry_Bush,_c1848.jpg|100px]]
-| [[4 March]] [[1849]]
-| [[9 tháng 7]] [[1850]]<ref name = "D"/>
+| [[ᎠᏅᏱ 4]]‚ [[1849]]
+| [[ᎫᏰᏉᏂ 9]]‚ [[1850]]
 | Đảng Whig
-| [[Millard Fillmore]]
+| <big>[[ᎻᎳᏗ ᏈᎵᎼᎠ]]</big> <br> <small>''Millard Fillmore''</small>
 | rowspan=2 align=center | 16
 |- 
 | '''13'''
-| [[Millard Fillmore]]
+| <big>[[ᎻᎳᏗ ᏈᎵᎼᎠ]]</big> <br> <small>''Millard Fillmore'' <br> (1800–1874)</small>
 | [[File:Millard Fillmore.jpg|100px]]
-| [[9 tháng 7]] [[1850]]
-| [[4 March]] [[1853]]
+| [[ᎫᏰᏉᏂ 9]]‚ [[1850]]
+| [[ᎠᏅᏱ 4]]‚ [[1853]]
 | Đảng Whig
 | 
 |- 
 | '''14'''
-| [[Franklin Pierce]]
+| <big>[[ᎦᎸᏥᎵᏂ ᏈᎠᏏ]]</big> <br> <small>''Franklin Pierce'' <br> (1804–1869)</small>
 | [[File:Franklin_Pierce_by_GPA_Healy,_1858.jpg|100px]]
-| [[4 March]] [[1853]]
-| [[4 March]] [[1857]]
+| [[ᎠᏅᏱ 4]]‚ [[1853]]
+| [[ᎠᏅᏱ 4]]‚ [[1857]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[William R. King|William King]]<ref name = "D"/>
+| <big>[[ᏫᎵᏯᎻ Ꮇ. ᎩᏂᎩ]]</big> <br> <small>''William R. King''</small>
 | align=center | 17
 |- 
 | '''15'''
-| [[James Buchanan]]
+| <big>[[ᏥᎻ ᏊᎨᎾᏂ]]</big> <br> <small>''James Buchanan'' <br> (1791–1868)</small>
 | [[File:Jb15.gif|100px]]
 | [[4 March]] [[1857]]
 | [[4 March]] [[1861]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[John C. Breckinridge|John Breckinridge]]
+| <big>[[ᏣᏂ Ꭷ. ᏇᎨᏂᏫᏥ]]</big> <br> <small>''John C. Breckinridge''</small>
 | align=center | 18
 |- 
 | rowspan=2 | '''16'''
-| rowspan=2 | [[Abraham Lincoln]]
+| rowspan=2 | <big>[[ᎡᏆᎭᎻ ᎵᏂᎧᏂ]]</big> <br> <small>''Abraham Lincoln'' <br> </small>
 | rowspan=2 | [[File:Abraham_Lincoln_by_George_Peter_Alexander_Healy.jpg|100px]]
-| rowspan=2 | [[4 March]] [[1861]]
-| rowspan=2 | [[15 April]] [[1865]]<ref name="A">Assassinated.</ref>
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]<br />Đảng Liên đoàn Quốc gia<ref name = "U">Abraham Lincoln and Andrew Johnson were, respectively, a Republican and a Democrat who ran on the National Union ticket in 1864. </ref>
-| [[Hannibal Hamlin]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1861]]
+| rowspan=2 | [[ᎧᏬᏂ 15]]‚ [[1865]]
+| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎭᏂᏆᎵ ᎭᎻᎵᏂ]]</big> <br> <small>''Hannibal Hamlin''</small>
 | align=center | 19
 |-
-| [[Andrew Johnson]] || rowspan=2 align=center | 20
+| <big>[[ᎡᏂᏗ ᏣᏂᏌᏂ]]</big> <br> <small>''Andrew Johnson''</small>
+|| rowspan=2 align=center | 20
 |- 
 | '''17'''
-| [[Andrew Johnson]]
+| <big>[[ᎡᏂᏗ ᏣᏂᏌᏂ]]</big> <br> <small>''Andrew Johnson'' <br> (1808–1875)</small>
 | [[File:aj17.gif|100px]]
-| [[15 April]] [[1865]]
-| [[4 March]] [[1869]]
+| [[ᎧᏬᏂ 15]]‚ [[1865]]
+| [[ᎠᏅᏱ 4]]‚ [[1869]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]<br />Đảng Liên đoàn Quốc gia<ref name="U"/>
 | 
 |- 
 | rowspan=2 | '''18'''
-| rowspan=2 | [[Ulysses S. Grant]]
+| rowspan=2 | <big>[[ᏳᎵᏏ Ꮝ. ᎦᎴᏂᏘ]]</big> <br> <small>''Ulysses S. Grant'' <br> (1822–1885)</small>
 | rowspan=2 | [[File:ug18.gif|100px]]
-| rowspan=2 | [[4 March]] [[1869]]
-| rowspan=2 | [[4 March]] [[1877]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1869]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1877]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Schuyler Colfax]]
+| <big>[[ᏍᎧᎢᎳ ᎪᎵᏩᎩᏏ]]</big> <br> <small>''Schuyler Colfax''</small>
 | align=center | 21
 |- 
-| [[Henry Wilson]]<ref name="D"/><br />
+| <big>[[ᎮᏁᏫ ᏫᎵᏌᏂ]]</big> <br> <small>''Henry Wilson''
 | align=center | 22
 |- 
 | '''19'''
-| [[Rutherford B. Hayes]]
+| <big>[[ᏭᏔᏬᏗ Ꮛ. ᎮᏱᏏ]]</big> <br> <small>''Rutherford B. Hayes'' <br> (1822–1893)</small>
 | [[File:Rhayes.png|100px]]
-| [[4 March]] [[1877]]
-| [[4 March]] [[1881]]
+| [[ᎠᏅᏱ 4]]‚ [[1877]]
+| [[ᎠᏅᏱ 4]]‚ [[1881]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]] 
-| [[William A. Wheeler|William Wheeler]]
+| <big>[[ᏫᎵᏯᎻ Ꭰ. ᏫᎳ]]</big> <br> <small>''William A. Wheeler''</small>
 | align=center | 23
 |- 
 | '''20'''
-| [[James Garfield]]
+| <big>[[ᏥᎻ ᎦᏫᎵᏗ]]</big> <br> <small>''James Garfield'' <br> (1831–1881)</small>
 | [[File:James Garfield.jpg|100px]]
-| [[4 March]] [[1881]]
-| [[19 September]] [[1881]]<ref name="A"/>
+| [[ᎠᏅᏱ 4]]‚ [[1881]]
+| [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Chester A. Arthur]]
+| <big>[[ᏤᏍᏔ Ꭰ. ᎠᏘ]]</big> <br> <small>''Chester A. Arthur''</small>
 | rowspan=2 align=center | 24
 |- 
 | '''21'''
