*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -201,102 +201,102 @@
 | rowspan=2 align=center | 24
 |- 
 | '''21'''
-| [[Chester A. Arthur]]
+| <big>[[ᏤᏍᏔ Ꭰ. ᎠᏘ]]</big> <br> <small>''Chester A. Arthur'' <br> (1829–1886)</small>
 | [[file:Chester_A_Arthur_by_Daniel_Huntington.jpeg|100px]]
-| [[19 September]] [[1881]]
-| [[4 March]] [[1885]]
+| [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
+| [[ᎠᏅᏱ 4]]‚ [[1885]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
 | 
 |- 
 | '''22'''
-| [[Grover Cleveland]]
+| <big>[[ᏉᏩ ᏟᏩᎳᏂ]]</big> <br> <small>''Grover Cleveland'' <br> (1837–1908)</small>
 | [[File:Grover Cleveland portrait2.jpg|100px]]
-| [[4 March]] [[1885]]
-| [[4 March]] [[1889]]
+| [[ᎠᏅᏱ 4]]‚ [[1885]]
+| [[ᎠᏅᏱ 4]]‚ [[1889]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Thomas A. Hendricks|Thomas Hendricks]]<ref name="D"/>
+| <big>[[ᏓᎻ Ꭱ. ᎮᏂᏓᏫᎩᏏ]]</big> <br> <small>''Thomas A. Hendricks'' </small>
 | align=center | 25
 |- 
 | '''23'''
-| [[Benjamin Harrison]]
+| <big>[[ᏇᏂᏣᎻᏂ ᎮᏫᏌᏂ]]</big> <br> <small>''Benjamin Harrison'' <br> (1833–1901)</small>
 | [[File:Benjamin Harrison.jpg|100px]]
-| [[4 March]] [[1889]]
-| [[4 March]] [[1893]]
+| [[ᎠᏅᏱ 4]]‚ [[1889]]
+| [[ᎠᏅᏱ 4]]‚ [[1893]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Levi P. Morton|Levi Morton]]
+| <big>[[ᎴᏩᎢ Ꮖ. ᎼᏔᏂ]]</big> <br> <small>''Levi P. Morton''</small>
 | align=center | 26
 |- 
 | '''24'''
-| [[Grover Cleveland]]<br /><small>''(tái nhiệm)''</small>
+| <big>[[ᏉᏩ ᏟᏩᎳᏂ]]</big> <br> <small>''Grover Cleveland'' <br> (1837–1908)</small>
 | [[File:Grover Cleveland, painting by Anders Zorn.jpg|100px]]
 | [[4 March]] [[1893]]
 | [[4 March]] [[1897]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Adlai E. Stevenson I|Adlai E. Stevenson]]
+| <big>[[ᎠᏕᎴᎢ ᏳᏫᏂᎩ ᏍᏘᏪᏂᏌᏂ|ᎠᏕᎴᎢ Ᏻ. ᏍᏘᏪᏂᏌᏂ]]</big> <br> <small>''Adlai E. Stevenson''</small>
 | align=center | 27
 |- 
 | rowspan=2 | '''25'''
-| rowspan=2 | [[William McKinley]]
+| rowspan=2 | <big>[[ᏫᎵᏯᎻ ᎹᎩᏂᎵ]]</big> <br> <small>''William McKinley'' <br> (1843–1901)</small>
 | rowspan=2 | [[File:Official White House portrait of William McKinley.jpg|100px]]
-| rowspan=2 | [[4 March]] [[1897]]
-| rowspan=2 | [[14 September]] [[1901]]<ref name="A"/>
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1897]]
+| rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]<ref name="A"/>
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Garret Hobart]]<ref name="D"/>
+| <big>[[ᎨᏪᏘ ᎰᏆᏘ]]</big> <br> <small>''Garret Hobart''</small>
 | align=center | 28
 |- 
-| [[Theodore Roosevelt]]
+| <big>[[ᏘᎣᏙᎠ ᏭᏎᏪᎵᏘ]]</big> <br> <small>''Theodore Roosevelt'' </small>
 | rowspan=2 align=center | 29
 |- style="background:#ffc2e1"
 |- 
-| rowspan=2 | '''[[Nhiệm kỳ Tổng thống của Theodore Roosevelt|26]]'''
-| rowspan=2 | [[Theodore Roosevelt]]
+| rowspan=2 | '''26'''
+| rowspan=2 | <big>[[ᏘᎣᏙᎠ ᏭᏎᏪᎵᏘ]]</big> <br> <small>''Theodore Roosevelt'' <br> (1858–1919)</small>
 | rowspan=2 | [[File:Troosevelt.gif|100px]]
-| rowspan=2 | [[14 September]] [[1901]]
-| rowspan=2 | [[4 March]] [[1909]]
+| rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1909]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
 | 
 |- 
-| [[Charles W. Fairbanks|Charles Fairbanks]]
+| <big>[[ᏣᎵ Ꮹ. ᏪᎠᏇᏂᎩᏏ]]</big> <br> <small>''Charles W. Fairbanks'' </small>
 | align=center | 30
 |- 
 | '''27'''
-| [[William Howard Taft|William H. Taft]]
+| <big>[[ᏫᎵᏯᎻ ᎰᏩᏗ ᏔᏩᏘ]]</big> <br> <small>''William Howard Taft'' <br> (1857–1930)</small>
 | [[File:TaftOfficial Portrait.jpg|100px]]
-| [[4 March]] [[1909]]
-| [[4 March]] [[1913]]
+| [[ᎠᏅᏱ 4]]‚ [[1909]]
+| [[ᎠᏅᏱ 4]]‚ [[1913]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[James S. Sherman|James Sherman]]<ref name="D"/>
+| <big>[[ᏥᎻ Ꮝ. ᏒᎹᏂ]]</big> <br> <small>''James S. Sherman''</small>
 | align=center | 31
 |- 
 | rowspan=2 | '''28'''
-| rowspan=2 | [[Woodrow Wilson]]
+| rowspan=2 | <big>[[ᏭᏗᎶ ᏫᎵᏌᏂ]]</big> <br> <small>''Woodrow Wilson'' <br> (1856–1924)</small>
 | rowspan=2 | [[File:ww28.gif|100px]]
-| rowspan=2 | [[4 March]] [[1913]]
-| rowspan=2 | [[4 March]] [[1921]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1913]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1921]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| rowspan=2 | [[Thomas R. Marshall|Thomas Marshall]]
+| rowspan=2 | <big>[[ᏓᎻ Ꮹ. ᎹᏌᎵ]]</big> <br> <small>''Thomas R. Marshall'' </small>
 | align=center | 32
 |- 
 | align=center | 33
 |- 
 | '''29'''
-| [[Warren G. Harding]]
+| <big>[[ᏩᎴᏂ Ꭶ. ᎭᏗᏂᎩ]]</big> <br> <small>''Warren G. Harding'' <br> (1865–1923)</small>
 | [[File:wh29.gif|100px]]
-| [[4 March]] [[1921]]
-| [[2 August]] [[1923]]<ref name="D"/>
+| [[ᎠᏅᏱ 4]]‚ [[1921]]
+| [[ᎦᎶᏂ 2]]‚ [[1923]]<ref name="D"/>
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Calvin Coolidge]]
+| <big>[[ᎧᎵᏫᏂ ᎫᎵᏥ]]</big> <br> <small>''Calvin Coolidge''</small>
 | rowspan=2 align=center | 34
 |- 
 | rowspan=2 | '''30'''
-| rowspan=2 | [[Calvin Coolidge]]
+| rowspan=2 | <big>[[ᎧᎵᏫᏂ ᎫᎵᏥ]]</big> <br> <small>''Calvin Coolidge'' <br> (1872–1933)</small>
 | rowspan=2 | [[File:CoolidgeWHPortrait.gif|100px]]
-| rowspan=2 | [[2 August]] [[1923]]
-| rowspan=2 | [[4 March]] [[1929]]
+| rowspan=2 | [[ᎦᎶᏂ 2]]‚ [[1923]]
+| rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1929]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
 | 
 |- 
-| [[Charles G. Dawes|Charles Dawes]]
+| <big>[[ᏣᎵ Ꭸ. ᏓᏭᏏ]]</big> <br> <small>''Charles G. Dawes'' </small>
 | align=center | 35
 |- 
 | '''31'''
