*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -300,12 +300,12 @@
 | align=center | 35
 |- 
 | '''31'''
-| [[Herbert Hoover]]
+| <big>[[ᎮᏆᏘ ᎱᏩ]]</big> <br> <small>''Herbert Hoover'' <br> (1874–1964)</small>
 | [[File:Herbert_Clark_Hoover_by_Greene,_1956.jpg|100px]]
-| [[4 March]] [[1929]]
-| [[4 March]] [[1933]]
+| [[ᎠᏅᏱ 4]]‚ [[1929]]
+| [[ᎠᏅᏱ 4]]‚ [[1933]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Charles Curtis]]
+| <big>[[ᏣᎵ ᎬᏓᏏ]]</big> <br> <small>''Charles Curtis''</small>
 | align=center | 36
 |- 
 | rowspan=4 | '''32'''
