*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -160,7 +160,7 @@
 | align=center | 19
 |-
 | <big>[[ᎡᏂᏗ ᏣᏂᏌᏂ]]</big> <br> <small>''Andrew Johnson''</small>
-|| rowspan=2 align=center | 20
+| rowspan=2 align=center | 20
 |- 
 | '''17'''
 | <big>[[ᎡᏂᏗ ᏣᏂᏌᏂ]]</big> <br> <small>''Andrew Johnson'' <br> (1808–1875)</small>
@@ -229,8 +229,8 @@
 | '''24'''
 | <big>[[ᏉᏩ ᏟᏩᎳᏂ]]</big> <br> <small>''Grover Cleveland'' <br> (1837–1908)</small>
 | [[File:Grover Cleveland, painting by Anders Zorn.jpg|100px]]
-| [[4 March]] [[1893]]
-| [[4 March]] [[1897]]
+| [[ᎠᏅᏱ 4]]‚ [[1893]]
+| [[ᎠᏅᏱ 4]]‚ [[1897]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
 | <big>[[ᎠᏕᎴᎢ ᏳᏫᏂᎩ ᏍᏘᏪᏂᏌᏂ|ᎠᏕᎴᎢ Ᏻ. ᏍᏘᏪᏂᏌᏂ]]</big> <br> <small>''Adlai E. Stevenson''</small>
 | align=center | 27
@@ -309,142 +309,142 @@
 | align=center | 36
 |- 
 | rowspan=4 | '''32'''
-| rowspan=4 | [[Franklin D. Roosevelt]]
+| rowspan=4 | <big>[[ᎦᎸᏥᎵᏂ Ꮥ. ᏭᏎᏪᎵᏘ]]</big> <br> <small>''Franklin D. Roosevelt'' <br> (1882–1945)</small>
 | rowspan=4 | [[File:FDR_in_1933.jpg|100px]]
-| rowspan=4 | [[4 March]] [[1933]]
-| rowspan=4 | [[12 April]] [[1945]]<ref name="D"/>
+| rowspan=4 | [[ᎠᏅᏱ 4]]‚ [[1933]]
+| rowspan=4 | [[ᎧᏬᏂ 12]]‚ [[1945]]
 | rowspan=4 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| rowspan=2 | [[John Nance Garner|John Garner]]
+| rowspan=2 | <big>[[ᏣᏂ ᏁᏂᏏ ᎦᎾ]]</big> <br> <small>''John Nance Garner'' </small>
 | align=center | 37
 |- 
 | align=center | 38
 |- 
-| [[Henry A. Wallace|Henry Wallace]]
+| <big>[[ᎮᏁᏫ Ꭱ. ᏩᎳᏏ]]</big> <br> <small>''Henry A. Wallace''</small>
 | align=center |39
 |- 
-| [[Harry S. Truman]]
+| <big>[[ᎮᏫ Ꮝ. ᏡᎹᏂ]]</big> <br> <small>''Harry S. Truman'' </small>
 | rowspan=2 align=center | 40
 |- 
 | rowspan=2 | '''33'''
-| rowspan=2 | [[Harry S. Truman]]
+| rowspan=2 | <big>[[ᎮᏫ Ꮝ. ᏡᎹᏂ]]</big> <br> <small>''Harry S. Truman'' <br> (1884–1972)</small>
 | rowspan=2 | [[File:HarryTruman.jpg|100px]]
-| rowspan=2 | [[12 April]] [[1945]]
-| rowspan=2 | [[20 January]] [[1953]]
+| rowspan=2 | [[ᎧᏬᏂ 12]]‚ [[1945]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1953]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
 | 
 |- 
-| [[Alben Barkley]]
+| <big>[[ᎠᎵᏆᏂ ᏆᎩᎵ]]</big> <br> <small>''Alben Barkley'' </small>
 | align=center | 41
 |- 
 | rowspan=2 | '''34'''
-| rowspan=2 | [[Dwight D. Eisenhower]]
+| rowspan=2 | <big>[[ᏓᏩᎢᏘ Ꮥ. ᎠᎢᏎᏂᎭᏩ]]</big> <br> <small>''Dwight D. Eisenhower'' <br> (1890–1969)</small>
 | rowspan=2 | [[File:Dwight_D._Eisenhower,_official_Presidential_portrait.jpg|100px]]
-| rowspan=2 | [[20 January]] [[1953]]
-| rowspan=2 | [[20 January]] [[1961]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚  [[1953]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1961]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| rowspan=2 | [[Richard Nixon]]
+| rowspan=2 | <big>[[ᎵᏣᏗ ᏂᎩᏌᏂ]]</big> <br> <small>''Richard Nixon'' </small>
 | align=center | 42
 |- 
 | align=center | 43
 |- 
 | '''35'''
-| [[John F. Kennedy]]
+| <big>[[ᏣᏂ Ꮻ. ᎨᏁᏗ]]</big> <br> <small>''John F. Kennedy'' <br> (1917–1963)</small>
 | [[File:John_F_Kennedy_Official_Portrait.jpg|100px]]
-| [[20 January]] [[1961]]
-| [[22 January1]] [[1963]]<ref name="A"/>
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1961]]
+| [[ᏅᏓᏕᏩ 22]]‚ [[1963]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Lyndon B. Johnson]]
+| <big>[[ᎵᏂᏓᏂ Ꮗ. ᏣᏂᏌᏂ]]</big> <br> <small>''Lyndon B. Johnson'' </small>
 | rowspan=2 align=center | 44
 |- 
 | rowspan=2 | '''36'''
-| rowspan=2 | [[Lyndon B. Johnson]]
+| rowspan=2 | <big>[[ᎵᏂᏓᏂ Ꮗ. ᏣᏂᏌᏂ]]</big> <br> <small>''Lyndon B. Johnson'' <br> (1908–1973)</small>
 | rowspan=2 | [[File:Lyndon B. Johnson.jpg|100px]]
-| rowspan=2 | [[22 January1]] [[1963]]
-| rowspan=2 | [[20 January]] [[1969]]
+| rowspan=2 | [[ᏅᏓᏕᏩ 22]]‚ [[1963]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1969]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
 | 
 |- 
-| [[Hubert Humphrey]]
+| <big>[[ᎱᏆᏘ ᎭᎻᏈ]]</big> <br> <small>''Hubert Humphrey''</small>
 | align=center | 45
 |- 
 | rowspan=2 | '''37'''
-| rowspan=2 | [[Richard Nixon]]
+| rowspan=2 | <big>[[ᎵᏣᏗ ᏂᎩᏌᏂ]]</big> <br> <small>''Richard Nixon'' <br> (1913–1994)</small>
 | rowspan=2 | [[File:rn37.gif|100px]]
-| rowspan=2 | [[20 January]] [[1969]]
-| rowspan=2 | [[9 August]] [[1974]]<ref name="R"/>
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1969]]
+| rowspan=2 | [[ᎦᎶᏂ 9]]‚ [[1974]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Spiro Agnew]]
+| <big>[[ᏍᏈᎶ ᎠᎩᏄ]]</big> <br> <small>''Spiro Agnew'' </small>
 | align=center | 46
 |- 
-| [[Spiro Agnew]]<ref name="R"/><br /><small>''vacant''</small><br />[[Gerald Ford]]
+| <big>[[ᏤᏩᎵᏗ ᏬᏗ]]</big> <br> <small>''Gerald Ford'' </small>
 | rowspan=2 align=center | 47
 |- 
-| '''[[Nhiệm kỳ Tổng thống của Gerald Ford|38]]'''
-| [[Gerald Ford]]
+| '''38'''
+| <big>[[ᏤᏩᎵᏗ ᏬᏗ]]</big> <br> <small>''Gerald Ford'' <br> (1913–2006)</small>
 | [[File:Gerald_R._Ford_-_portrait.jpg|100px]]
-| [[9 August]] [[1974]]
-| [[20 January]] [[1977]]
+| [[ᎦᎶᏂ 9]]‚ [[1974]]
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1977]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Nelson Rockefeller]]
+| <big>[[ᏁᎵᏌᏂ ᏬᎨᏪᎳ]]</big> <br> <small>''Nelson Rockefeller'' </small>
 |- 
 | '''39'''
-| [[Jimmy Carter]]
+| <big>[[ᏥᎻ ᎧᏔ]]</big> <br> <small>''Jimmy Carter'' <br> (1924– )</small>
 | [[File:James_E._Carter_-_portrait.gif|100px]]
-| [[20 January]] [[1977]]
-| [[20 January]] [[1981]]
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1977]]
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1981]]
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Walter Mondale]]
+| <big>[[ᏩᎵᏔ ᎹᏂᏕᎵ]]</big> <br> <small>''Walter Mondale'' </small>
 | align=center | 48
 |- 
 | rowspan=2 | '''40'''
-| rowspan=2 | [[Ronald Reagan]]
+| rowspan=2 | <big>[[ᏬᎾᎵᏗ ᏪᎦᏂ]]</big> <br> <small>''Ronald Reagan'' <br> (1911–2004)</small>
 | rowspan=2 | [[File:Official Portrait of President Reagan 1981.jpg|100px]]
-| rowspan=2 | [[20 January]] [[1981]]
-| rowspan=2 | [[20 January]] [[1989]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1981]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1989]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| rowspan=2 | [[George H. W. Bush]]
+| rowspan=2 | <big>[[ᏣᏥ Ꭾ. Ꮹ. ᏊᏏ]]</big> <br> <small>''George H. W. Bush'' </small>
 | align=center | 49
 |- 
 | align=center | 50
 |- 
 | '''41'''
-| [[George H. W. Bush]]
+| <big>[[ᏣᏥ Ꭾ. Ꮹ. ᏊᏏ]]</big> <br> <small>''George H. W. Bush'' <br> (1924– )</small>
 | [[File:George_H._W._Bush_-_portrait_by_Herbert_Abrams_(1994).jpg|100px]]
-| [[20 January]] [[1989]]
-| [[20 January]] [[1993]]
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1989]]
+| [[ᎤᏃᎸᏔᏅ 20]]‚ [[1993]]
 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| [[Dan Quayle]]
+| <big>[[ᏕᏂ ᏇᎵ]]</big> <br> <small>''Dan Quayle'' </small>
 | align=center | 51
 |- 
 | rowspan=2 | '''42'''
-| rowspan=2 | [[Bill Clinton]]
+| rowspan=2 | <big>[[ᏫᎵ ᏟᏂᏔᏂ]]</big> <br> <small>''Bill Clinton'' <br> (1946– )</small>
 | rowspan=2 | [[File:Clinton.jpg|100px]]
-| rowspan=2 | [[20 January]] [[1993]]
-| rowspan=2 | [[20 January]] [[2001]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1993]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2001]]
 | rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| rowspan=2 | [[Al Gore]]
+| rowspan=2 | <big>[[ᎠᎵ ᎪᎠ]]</big> <br> <small>''Al Gore''</small>
 | align=center | 52
 |- 
 | align=center | 53
 |- 
 | rowspan=2 | '''[[Nhiệm kỳ Tổng thống của George W. Bush|43]]'''
-| rowspan=2 | [[George W. Bush]]
+| rowspan=2 | <big>[[ᏣᏥ Ꮹ. ᏊᏏ]]</big> <br> <small>'' '' <br> (1946– )</small>[[George W. Bush]]
 | rowspan=2 | [[file:George-W-Bush.jpeg|100px]]
-| rowspan=2 | [[20 January]] [[2001]]
-| rowspan=2 | [[20 January]] [[2009]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2001]]
+| rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2009]]
 | rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
-| rowspan=2 | [[Dick Cheney]]
+| rowspan=2 | <big>[[ᏗᎩ ᏤᏂ]]</big> <br> <small>''Dick Cheney''</small>
 | align=center | 54
 |- 
 | align=center | 55
 |- 
 | '''44'''
-| [[Barack Obama]]
+| <big>[[ᏆᎳᎩ ᎣᏆᎹ]]</big> <br> <small>''Barack Obama'' <br> (1961– )</small>
 | [[File:Official portrait of Barack Obama.jpg|100px]]
-| [[20 January]] [[2009]]
-| Đương nhiệm<br /><small>(''Nhiệm kỳ kết thúc vào ngày <br />[[20 January]] [[2013]]'')</small>
+| [[ᎤᏃᎸᏔᏅ 20]] [[2009]]
+| –
 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
-| [[Joe Biden]]
+| <big>[[ᏦᏩ ᏆᎢᏕᏂ]]</big> <br> <small>''Joe Biden'' </small>
 | align=center | 56
 |- 
 |}
