--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -1,13 +1,15 @@
+ᎯᎠ [[ᏙᎪᏪᎸ]] <big>'''ᎠᎺᎵᎨ ᎤᏂᎬᏫᏳᎯ'''</big> ᎤᎾᏤᎵᎦ. 
+
 {| class="wikitable" style="text-align:center"
 |- style="background:#cccccc"
-! # !! colspan=2|ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ !! Bắt đầu nhiệm kỳ !! Kết thúc nhiệm kỳ !! Đảng !! Phó tổng thống !! Nhiệm kỳ 
+! # !! colspan=2|<big>ᎠᎺᎵᎨ ᎤᎬᏫᏳᎯ</big> !! <big>ᎠᎴᏂᏍᎬ ᎠᏓᎴᏂᏍᎬ</big> !! <big>ᎠᎴᏂᏍᎬ ᎤᎵᏍᏛ</big> !! <big>ᎪᎱᏍᏗ ᎠᏍᏆᎵᏍᎬᎢ</big> !! <big>ᏔᎵᏁ-ᎤᎬᏫᏳᎯ</big> !! <big>ᎠᎴᏂᏍᎬ </big>
 |- 
 | rowspan=2 | '''1'''
 | rowspan=2 | <big>[[ᏣᏥ ᏩᏒᏓᎾ]]</big> <br> <small>''George Washington'' <br> (1732–1799)</small>
 | rowspan=2 | [[File:Gilbert_Stuart,_George_Washington_(Lansdowne_portrait,_1796).jpg|100px]]
 | rowspan=2 | [[ᎧᏬᏂ 30]]‚ [[1789]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1797]]
-| rowspan=2 | Không Đảng
+| rowspan=2 | –
 | rowspan=2 | <big>[[ᏣᏂ ᎠᏓᎻᏏ]]</big> <br> <small>''John Adams''</small>
 | align=center | 1
 |- 
@@ -18,7 +20,7 @@
 | [[file:Adamstrumbull.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1797]]
 | [[ᎠᏅᏱ 4]]‚ [[1801]]
-| Đảng Liên bang<br />Không Đảng
+| <big>''[[Federalist|ᎠᏂᏫᏥᏂ]]''</big>
 | <big>[[ᏓᎻ ᏤᏩᏌᏂ]]</big> <br> <small>''Thomas Jefferson''</small>
 | align=center | 3
 |- 
@@ -28,7 +30,7 @@
 | rowspan=2 | [[File:Thomas_Jefferson_by_Rembrandt_Peale,_1800.jpg|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1801]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
-| rowspan=2 | Đảng Dân chủ - Cộng hòa
+| rowspan=2 | <big>[[ᎤᎦᏩᎾ-ᎤᏴᏜ]]</big>
 | <big>[[ᎡᎳᏂ Ꮛ]]</big> <br> <small>''Aaron Burr''</small>
 | align=center | 4
 |- 
@@ -41,7 +43,7 @@
 | rowspan=2 | [[File:Jm4.gif|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1809]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᏩᎾ-ᎤᏴᏜ]]</big>
 | <big>[[ᏣᏥ ᏟᏂᏔᏂ]]</big> <br> <small>''George Clinton''</small>
 | align=center | 6
 |- 
@@ -53,7 +55,7 @@
 | rowspan=2 | [[File:jm5.gif|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1817]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1825]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᏩᎾ-ᎤᏴᏜ]]</big>
 | rowspan=2 | <big>[[ᏕᏂᎵ ᏓᎻᎩᏂᏏ|ᏕᏂᎵ Ꮧ. ᏓᎻᎩᏂᏏ]]</big> <br> <small>''Daniel D. Tompkins'' </small>
 | align=center | 8
 |- 
@@ -64,7 +66,7 @@
 | [[File:John_Quincy_Adams_by_GPA_Healy,_1858.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1825]]
 | [[ᎠᏅᏱ 4]]‚ [[1829]]
-| Đảng Dân chủ - Cộng hòa
+| <big>[[ᎤᎦᏩᎾ-ᎤᏴᏜ]]</big>
 | <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun'' </small>
 | align=center | 10
 |- 
@@ -73,7 +75,7 @@
 | rowspan=2 | [[File:Andrew jackson head.jpg|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1829]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1837]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏣᏂ ᎧᎵᎱᏂ|ᏣᏂ Ꭷ. ᎧᎵᎱᏂ]]</big> <br> <small>''John C. Calhoun'' </small>
 | align=center | 11
 |- 
@@ -85,7 +87,7 @@
 | [[File:mb8.gif|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1837]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᎵᏣᏗ ᎺᏂᏙᎠ ᏣᏂᏌᏂ]]</big> <br> <small>''Richard Mentor Johnson'' </small>
 | align=center | 13
 |- 
@@ -94,7 +96,7 @@
 | [[File:William_Henry_Harrison_by_James_Reid_Lambdin,_1835.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]<ref name = "D"/>
-| Đảng Whig
+| <big>[[ᏫᎩ]]</big>
 | <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler'' </small>
 | rowspan=2 align=center | 14
 |- 
@@ -103,7 +105,7 @@
 | [[File:WHOportTyler.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
 | [[ᎠᏅᏱ 4]]‚ [[1845]]
-| Đảng Whig<br />Không Đảng
+| <big>[[ᏫᎩ]]</big>
 | 
 |- 
 | '''11'''
@@ -111,7 +113,7 @@
 | [[File:James_Knox_Polk_by_GPA_Healy,_1858.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1845]]
 | [[ᎠᏅᏱ 4]]‚ [[1849]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏣᏥ Ꮋ. ᏓᎳᏏ]]</big> <br> <small>''George M. Dallas''</small>
 | align=center | 15
 |- 
@@ -120,7 +122,7 @@
 | [[File:Zachary_Taylor_by_Joseph_Henry_Bush,_c1848.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1849]]
 | [[ᎫᏰᏉᏂ 9]]‚ [[1850]]
-| Đảng Whig
+| <big>[[ᏫᎩ]]</big>
 | <big>[[ᎻᎳᏗ ᏈᎵᎼᎠ]]</big> <br> <small>''Millard Fillmore''</small>
 | rowspan=2 align=center | 16
 |- 
@@ -129,7 +131,7 @@
 | [[File:Millard Fillmore.jpg|100px]]
 | [[ᎫᏰᏉᏂ 9]]‚ [[1850]]
 | [[ᎠᏅᏱ 4]]‚ [[1853]]
-| Đảng Whig
+| <big>[[ᏫᎩ]]</big>
 | 
 |- 
 | '''14'''
@@ -137,7 +139,7 @@
 | [[File:Franklin_Pierce_by_GPA_Healy,_1858.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1853]]
 | [[ᎠᏅᏱ 4]]‚ [[1857]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏫᎵᏯᎻ Ꮇ. ᎩᏂᎩ]]</big> <br> <small>''William R. King''</small>
 | align=center | 17
 |- 
@@ -146,7 +148,7 @@
 | [[File:Jb15.gif|100px]]
 | [[4 March]] [[1857]]
 | [[4 March]] [[1861]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏣᏂ Ꭷ. ᏇᎨᏂᏫᏥ]]</big> <br> <small>''John C. Breckinridge''</small>
 | align=center | 18
 |- 
@@ -155,7 +157,7 @@
 | rowspan=2 | [[File:Abraham_Lincoln_by_George_Peter_Alexander_Healy.jpg|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1861]]
 | rowspan=2 | [[ᎧᏬᏂ 15]]‚ [[1865]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎭᏂᏆᎵ ᎭᎻᎵᏂ]]</big> <br> <small>''Hannibal Hamlin''</small>
 | align=center | 19
 |-
@@ -167,7 +169,7 @@
 | [[File:aj17.gif|100px]]
 | [[ᎧᏬᏂ 15]]‚ [[1865]]
 | [[ᎠᏅᏱ 4]]‚ [[1869]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]<br />Đảng Liên đoàn Quốc gia<ref name="U"/>
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | 
 |- 
 | rowspan=2 | '''18'''
@@ -175,7 +177,7 @@
 | rowspan=2 | [[File:ug18.gif|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1869]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1877]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏍᎧᎢᎳ ᎪᎵᏩᎩᏏ]]</big> <br> <small>''Schuyler Colfax''</small>
 | align=center | 21
 |- 
@@ -187,7 +189,7 @@
 | [[File:Rhayes.png|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1877]]
 | [[ᎠᏅᏱ 4]]‚ [[1881]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]] 
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏫᎵᏯᎻ Ꭰ. ᏫᎳ]]</big> <br> <small>''William A. Wheeler''</small>
 | align=center | 23
 |- 
@@ -196,7 +198,7 @@
 | [[File:James Garfield.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1881]]
 | [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏤᏍᏔ Ꭰ. ᎠᏘ]]</big> <br> <small>''Chester A. Arthur''</small>
 | rowspan=2 align=center | 24
 |- 
@@ -205,7 +207,7 @@
 | [[file:Chester_A_Arthur_by_Daniel_Huntington.jpeg|100px]]
 | [[ᏚᎵᏍᏗ 19]]‚ [[1881]]
 | [[ᎠᏅᏱ 4]]‚ [[1885]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | 
 |- 
 | '''22'''
@@ -213,7 +215,7 @@
 | [[File:Grover Cleveland portrait2.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1885]]
 | [[ᎠᏅᏱ 4]]‚ [[1889]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏓᎻ Ꭱ. ᎮᏂᏓᏫᎩᏏ]]</big> <br> <small>''Thomas A. Hendricks'' </small>
 | align=center | 25
 |- 
@@ -222,7 +224,7 @@
 | [[File:Benjamin Harrison.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1889]]
 | [[ᎠᏅᏱ 4]]‚ [[1893]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎴᏩᎢ Ꮖ. ᎼᏔᏂ]]</big> <br> <small>''Levi P. Morton''</small>
 | align=center | 26
 |- 
@@ -231,7 +233,7 @@
 | [[File:Grover Cleveland, painting by Anders Zorn.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1893]]
 | [[ᎠᏅᏱ 4]]‚ [[1897]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᎠᏕᎴᎢ ᏳᏫᏂᎩ ᏍᏘᏪᏂᏌᏂ|ᎠᏕᎴᎢ Ᏻ. ᏍᏘᏪᏂᏌᏂ]]</big> <br> <small>''Adlai E. Stevenson''</small>
 | align=center | 27
 |- 
@@ -240,7 +242,7 @@
 | rowspan=2 | [[File:Official White House portrait of William McKinley.jpg|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1897]]
 | rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]<ref name="A"/>
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎨᏪᏘ ᎰᏆᏘ]]</big> <br> <small>''Garret Hobart''</small>
 | align=center | 28
 |- 
@@ -253,7 +255,7 @@
 | rowspan=2 | [[File:Troosevelt.gif|100px]]
 | rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1909]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | 
 |- 
 | <big>[[ᏣᎵ Ꮹ. ᏪᎠᏇᏂᎩᏏ]]</big> <br> <small>''Charles W. Fairbanks'' </small>
@@ -264,7 +266,7 @@
 | [[File:TaftOfficial Portrait.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1909]]
 | [[ᎠᏅᏱ 4]]‚ [[1913]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏥᎻ Ꮝ. ᏒᎹᏂ]]</big> <br> <small>''James S. Sherman''</small>
 | align=center | 31
 |- 
@@ -273,7 +275,7 @@
 | rowspan=2 | [[File:ww28.gif|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1913]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1921]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᎾᏩ]]</big>
 | rowspan=2 | <big>[[ᏓᎻ Ꮹ. ᎹᏌᎵ]]</big> <br> <small>''Thomas R. Marshall'' </small>
 | align=center | 32
 |- 
@@ -284,7 +286,7 @@
 | [[File:wh29.gif|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1921]]
 | [[ᎦᎶᏂ 2]]‚ [[1923]]<ref name="D"/>
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎧᎵᏫᏂ ᎫᎵᏥ]]</big> <br> <small>''Calvin Coolidge''</small>
 | rowspan=2 align=center | 34
 |- 
@@ -293,7 +295,7 @@
 | rowspan=2 | [[File:CoolidgeWHPortrait.gif|100px]]
 | rowspan=2 | [[ᎦᎶᏂ 2]]‚ [[1923]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1929]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | 
 |- 
 | <big>[[ᏣᎵ Ꭸ. ᏓᏭᏏ]]</big> <br> <small>''Charles G. Dawes'' </small>
@@ -304,7 +306,7 @@
 | [[File:Herbert_Clark_Hoover_by_Greene,_1956.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1929]]
 | [[ᎠᏅᏱ 4]]‚ [[1933]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏣᎵ ᎬᏓᏏ]]</big> <br> <small>''Charles Curtis''</small>
 | align=center | 36
 |- 
@@ -313,7 +315,7 @@
 | rowspan=4 | [[File:FDR_in_1933.jpg|100px]]
 | rowspan=4 | [[ᎠᏅᏱ 4]]‚ [[1933]]
 | rowspan=4 | [[ᎧᏬᏂ 12]]‚ [[1945]]
-| rowspan=4 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=4 | <big>[[ᎤᎦᎾᏩ]]</big>
 | rowspan=2 | <big>[[ᏣᏂ ᏁᏂᏏ ᎦᎾ]]</big> <br> <small>''John Nance Garner'' </small>
 | align=center | 37
 |- 
@@ -330,7 +332,7 @@
 | rowspan=2 | [[File:HarryTruman.jpg|100px]]
 | rowspan=2 | [[ᎧᏬᏂ 12]]‚ [[1945]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1953]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᎾᏩ]]</big>
 | 
 |- 
 | <big>[[ᎠᎵᏆᏂ ᏆᎩᎵ]]</big> <br> <small>''Alben Barkley'' </small>
@@ -341,7 +343,7 @@
 | rowspan=2 | [[File:Dwight_D._Eisenhower,_official_Presidential_portrait.jpg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚  [[1953]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1961]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | rowspan=2 | <big>[[ᎵᏣᏗ ᏂᎩᏌᏂ]]</big> <br> <small>''Richard Nixon'' </small>
 | align=center | 42
 |- 
@@ -352,7 +354,7 @@
 | [[File:John_F_Kennedy_Official_Portrait.jpg|100px]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1961]]
 | [[ᏅᏓᏕᏩ 22]]‚ [[1963]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᎵᏂᏓᏂ Ꮗ. ᏣᏂᏌᏂ]]</big> <br> <small>''Lyndon B. Johnson'' </small>
 | rowspan=2 align=center | 44
 |- 
@@ -361,7 +363,7 @@
 | rowspan=2 | [[File:Lyndon B. Johnson.jpg|100px]]
 | rowspan=2 | [[ᏅᏓᏕᏩ 22]]‚ [[1963]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1969]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᎾᏩ]]</big>
 | 
 |- 
 | <big>[[ᎱᏆᏘ ᎭᎻᏈ]]</big> <br> <small>''Hubert Humphrey''</small>
@@ -372,7 +374,7 @@
 | rowspan=2 | [[File:rn37.gif|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1969]]
 | rowspan=2 | [[ᎦᎶᏂ 9]]‚ [[1974]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏍᏈᎶ ᎠᎩᏄ]]</big> <br> <small>''Spiro Agnew'' </small>
 | align=center | 46
 |- 
@@ -384,7 +386,7 @@
 | [[File:Gerald_R._Ford_-_portrait.jpg|100px]]
 | [[ᎦᎶᏂ 9]]‚ [[1974]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1977]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏁᎵᏌᏂ ᏬᎨᏪᎳ]]</big> <br> <small>''Nelson Rockefeller'' </small>
 |- 
 | '''39'''
@@ -392,7 +394,7 @@
 | [[File:James_E._Carter_-_portrait.gif|100px]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1977]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1981]]
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏩᎵᏔ ᎹᏂᏕᎵ]]</big> <br> <small>''Walter Mondale'' </small>
 | align=center | 48
 |- 
@@ -401,7 +403,7 @@
 | rowspan=2 | [[File:Official Portrait of President Reagan 1981.jpg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1981]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1989]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | rowspan=2 | <big>[[ᏣᏥ Ꭾ. Ꮹ. ᏊᏏ]]</big> <br> <small>''George H. W. Bush'' </small>
 | align=center | 49
 |- 
@@ -412,7 +414,7 @@
 | [[File:George_H._W._Bush_-_portrait_by_Herbert_Abrams_(1994).jpg|100px]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1989]]
 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1993]]
-| [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᏕᏂ ᏇᎵ]]</big> <br> <small>''Dan Quayle'' </small>
 | align=center | 51
 |- 
@@ -421,7 +423,7 @@
 | rowspan=2 | [[File:Clinton.jpg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[1993]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2001]]
-| rowspan=2 | [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| rowspan=2 | <big>[[ᎤᎦᎾᏩ]]</big>
 | rowspan=2 | <big>[[ᎠᎵ ᎪᎠ]]</big> <br> <small>''Al Gore''</small>
 | align=center | 52
 |- 
@@ -432,7 +434,7 @@
 | rowspan=2 | [[file:George-W-Bush.jpeg|100px]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2001]]
 | rowspan=2 | [[ᎤᏃᎸᏔᏅ 20]]‚ [[2009]]
-| rowspan=2 | [[Đảng Cộng hòa Hoa Kỳ|Đảng Cộng hòa]]
+| rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | rowspan=2 | <big>[[ᏗᎩ ᏤᏂ]]</big> <br> <small>''Dick Cheney''</small>
 | align=center | 54
 |- 
@@ -443,8 +445,90 @@
 | [[File:Official portrait of Barack Obama.jpg|100px]]
 | [[ᎤᏃᎸᏔᏅ 20]] [[2009]]
 | –
-| [[Đảng Dân chủ Hoa Kỳ|Đảng Dân chủ]]
+| <big>[[ᎤᎦᎾᏩ]]</big>
 | <big>[[ᏦᏩ ᏆᎢᏕᏂ]]</big> <br> <small>''Joe Biden'' </small>
 | align=center | 56
 |- 
 |}
+
+[[af:Lys van Presidente van die Verenigde State]]
+[[am:የአሜሪካ ፕሬዝዳንቶች ዝርዝር]]
+[[ar:ملحق:قائمة رؤساء الولايات المتحدة الأمريكية]]
+[[frp:Lista des prèsidents des Ètats-Unis d’Amèrica]]
+[[ast:Presidentes de los Estaos Xuníos d'América]]
+[[bm:USA Jamanakuntigiw]]
+[[bn:মার্কিন যুক্তরাষ্ট্রের রাষ্ট্রপতিদের তালিকা]]
+[[bcl:Lista nin mga Presidente kan Estados Unidos]]
+[[bg:Списък на президентите на САЩ]]
+[[ca:Llista de presidents dels Estats Units]]
+[[cv:АПШ президенчĕсен ят-йышĕ]]
+[[cs:Seznam prezidentů Spojených států amerických]]
+[[de:Liste der Präsidenten der Vereinigten Staaten]]
+[[et:Ameerika Ühendriikide presidentide ja asepresidentide loend]]
+[[el:Κατάλογος Προέδρων των Ηνωμένων Πολιτειών]]
+[[en:List of Presidents of the United States]]
+[[es:Anexo:Presidentes de los Estados Unidos]]
+[[eo:Listo de prezidantoj de Usono]]
+[[eu:Ameriketako Estatu Batuetako presidenteen zerrenda]]
+[[fa:فهرست رئیس‌جمهورهای ایالات متحده آمریکا]]
+[[fo:Lista yvir forsetarnar í Sambandsríki Amerika]]
+[[fr:Liste des présidents des États-Unis]]
+[[fy:List fan Amerikaanske presidinten]]
+[[ko:미국의 대통령 목록]]
+[[hy:ԱՄՆ-ի նախագահների ցանկ]]
+[[hi:संयुक्त राज्य अमेरिका के राष्ट्रपतियों की सूची]]
+[[hr:Dodatak:Popis predsjednika Sjedinjenih Američkih Država]]
+[[io:Listo di prezidisti di Usa]]
+[[is:Listi yfir forseta Bandaríkjanna]]
+[[it:Lista dei Presidenti degli Stati Uniti d'America]]
+[[he:נשיא ארצות הברית#רשימת הנשיאים]]
+[[jv:Dhaptar Présidhèn Amérika Sarékat]]
+[[kn:ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನದ ರಾಷ್ಟ್ರಪತಿಗಳ ಪಟ್ಟಿ]]
+[[ka:აშშ-ის პრეზიდენტების სია]]
+[[kk:АҚШ президенттерінің тізімі]]
+[[kw:Lywydhyon a'n Statys Unys Amerika]]
+[[rw:Abaperezida ba Leta Zunze Ubumwe z’Amerika]]
+[[sw:Orodha ya Marais wa Marekani]]
+[[mrj:АУШ президентвлӓ]]
+[[la:Index Praesidum Civitatum Foederatarum Americae]]
+[[lv:ASV prezidentu uzskaitījums]]
+[[lb:Lëscht vun de Presidente vun den USA]]
+[[lt:Sąrašas:JAV prezidentai]]
+[[li:Presidente van de VS]]
+[[jbo:liste be lo merja'a]]
+[[hu:Az Amerikai Egyesült Államok elnökeinek listája]]
+[[mk:Список на претседатели на Соединетите Американски Држави]]
+[[xmf:ამერიკაშ პრეზიდენტეფიშ ერკებული]]
+[[arz:لستة رؤسا امريكا]]
+[[mzn:لیست رییس‌جومورون موتحده ایالات]]
+[[ms:Senarai Presiden Amerika Syarikat]]
+[[nl:Lijst van presidenten van de Verenigde Staten]]
+[[nds-nl:Lieste van presidenten van de Vereanegde Stoaten]]
+[[ja:歴代アメリカ合衆国大統領の一覧]]
+[[no:Liste over USAs presidenter]]
+[[nn:Presidentar i USA]]
+[[oc:Lista dels presidents dels Estats Units d'America]]
+[[nds:List van de Präsidenten van de USA]]
+[[pl:Prezydenci Stanów Zjednoczonych]]
+[[pt:Anexo:Lista de presidentes dos Estados Unidos]]
+[[ksh:Öwersich met de Präsidente von de Vereenischte Staate von Amerika]]
+[[ro:Lista președinților Statelor Unite ale Americii]]
+[[ru:Список президентов США]]
+[[sq:Lista e kryetarëve të Shteteve të Bashkuara]]
+[[sk:Zoznam prezidentov USA]]
+[[sl:Seznam predsednikov Združenih držav Amerike]]
+[[sr:Списак председника Сједињених Америчких Држава]]
+[[sh:Popis predsjednika SAD]]
+[[fi:Luettelo Yhdysvaltain presidenteistä]]
+[[sv:Lista över USA:s presidenter]]
+[[ta:ஐக்கிய அமெரிக்கக் குடியரசுத் தலைவர்கள்]]
+[[tt:АКШ президентлары исемлеге]]
+[[th:รายนามประธานาธิบดีสหรัฐอเมริกา]]
+[[tr:Amerika Birleşik Devletleri devlet başkanları listesi]]
+[[uk:Список президентів США]]
+[[vi:Danh sách Tổng thống Hoa Kỳ]]
+[[war:Talaan hin mga Mangulo han Estados Unidos]]
+[[yi:ליסטע פון פרעזידענטן פון די פאראייניגטע שטאטן]]
+[[yo:Àtòjọ àwọn Ààrẹ orílẹ̀-èdè Amẹ́ríkà]]
+[[zh-yue:美國總統一覽]]
+[[zh:美国总统列表]]
