*Empty MediaWiki Message*

--- a/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
+++ b/ᎠᎺᎵᎨ_ᎤᏂᎬᏫᏳᎯ.mw
@@ -95,7 +95,7 @@
 | <big>[[ᏫᎵᏯᎻ ᎮᏁᏫ ᎮᏫᏌᏂ|ᏫᎵᏯᎻ Ꭾ. ᎮᏫᏌᏂ]]</big> <br> <small>'' William H. Harrison'' <br> (1773–1841)</small>
 | [[File:William_Henry_Harrison_by_James_Reid_Lambdin,_1835.jpg|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1841]]
-| [[ᎠᏅᏱ 4]]‚ [[1841]]<ref name = "D"/>
+| [[ᎠᏅᏱ 4]]‚ [[1841]]
 | <big>[[ᏫᎩ]]</big>
 | <big>[[ᏣᏂ ᏔᎢᎳ]]</big> <br> <small>''John Tyler'' </small>
 | rowspan=2 align=center | 14
@@ -241,7 +241,7 @@
 | rowspan=2 | <big>[[ᏫᎵᏯᎻ ᎹᎩᏂᎵ]]</big> <br> <small>''William McKinley'' <br> (1843–1901)</small>
 | rowspan=2 | [[File:Official White House portrait of William McKinley.jpg|100px]]
 | rowspan=2 | [[ᎠᏅᏱ 4]]‚ [[1897]]
-| rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]<ref name="A"/>
+| rowspan=2 | [[ᏚᎵᏍᏗ 14]]‚ [[1901]]
 | rowspan=2 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎨᏪᏘ ᎰᏆᏘ]]</big> <br> <small>''Garret Hobart''</small>
 | align=center | 28
@@ -285,7 +285,7 @@
 | <big>[[ᏩᎴᏂ Ꭶ. ᎭᏗᏂᎩ]]</big> <br> <small>''Warren G. Harding'' <br> (1865–1923)</small>
 | [[File:wh29.gif|100px]]
 | [[ᎠᏅᏱ 4]]‚ [[1921]]
-| [[ᎦᎶᏂ 2]]‚ [[1923]]<ref name="D"/>
+| [[ᎦᎶᏂ 2]]‚ [[1923]]
 | <big>[[ᎤᏴᏜ]]</big>
 | <big>[[ᎧᎵᏫᏂ ᎫᎵᏥ]]</big> <br> <small>''Calvin Coolidge''</small>
 | rowspan=2 align=center | 34
